--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="tr">
-
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>
-    
-      Tale
-    
-  </title>
+  <title>Mail Hesabı Aç: Ücretsiz Email Aç</title>
 
  
 </head>
@@ -115,6 +110,5 @@
       </span>
     </footer>
 <link rel="stylesheet" href="/style.css">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
   </body>
 </html>
