--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <nav class="nav">
       <div class="nav-container">
-        <a href="/tale/">
-          <h2 class="nav-title">Tale</h2>
+        <a href="/">
+          <h2 class="nav-title">Email Aç</h2>
         </a>
         <ul>
-          <li><a href="https://chesterhow.github.io/tale/about">About</a></li>
-          <li><a href="/tale/">Posts</a></li>
+          <li><a href="/">Hakkında</a></li>
+          <li><a href="/">İletişim</a></li>
         </ul>
     </div>
   </nav>
