--- a/email-ac.html
+++ b/email-ac.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="nav">
       <div class="nav-container">
-        <a href="/tale/">
+        <a href="/">
           <h2 class="nav-title">Email Aç</h2>
         </a>
         <ul>
