--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Mail Hesabı Aç: Ücretsiz Email Aç</title>
-
- 
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
 </head>
-
-
   <body>
     <nav class="nav">
       <div class="nav-container">
