--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="tr">
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mail Hesabı Aç: Ücretsiz Email Aç</title>
+<html lang="tr-TR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
+<title>Mail Hesabı Aç: Ücretsiz Email Aç</title>
+<meta name="description" content="Ücretsiz Mail Hesabı Aç, Email Aç, E Posta Aç, Hotmail Aç, Gmail Aç konularında sizlere yardımcı olmaya geldik!"/>
+<meta name="robots" content="index, follow"/>
+<meta property="og:locale" content="tr_TR" />
 </head>
   <body>
-    <nav class="nav"><div class="nav-container">
-        <a href="/"><h2 class="nav-title">Email Aç</h2></a>
+    <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
     <main>
       <div class="catalogue">
