--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
-<title>Mail Hesabı Aç: Ücretsiz Email Aç</title>
+<title>Ücretsiz Email Aç: E Posta Hesabı Al</title>
 <meta name="description" content="Ücretsiz Mail Hesabı Aç, Email Aç, E Posta Aç, Hotmail Aç, Gmail Aç konularında sizlere yardımcı olmaya geldik!"/>
 <meta name="robots" content="index, follow"/>
 <meta property="og:locale" content="tr_TR" />
