--- a/email-ac.html
+++ b/email-ac.html
@@ -19,20 +19,27 @@
 Günümüzde yediden yetmişe her kesimin kullandığı e posta, yıllardır ücretsiz hizmet veren bir haberleşme aracıdır. Siz de e-posta nedir öğrenmek ve kendinize bir hesap açmak istiyorsanız yazımızı okumaya devam edebilirsiniz. 
 Üzerinden e-posta hesabı açabileceğiniz birçok servis bulunmaktadır. Bunlardan birisi Hotmail'dir. Size biraz Hotmail'den bahsedelim. Hotmail, e posta açma amacı üzerine kurulmuş bir servistir. Bu servis 1995 yılında kurulmuş olup daha eski kuşaklarca bilinen ve yine haberleşme amacı üzerine kurulu olan MSN'de bu servise aittir. Ancak günümüzde MSN hizmeti olmayıp bu görevi e-posta hesapları yüklenmiştir. Hotmail üzerinden e-posta adresi alımı ve kullanımı oldukça yaygındır. Hotmail üzerinden açtığınız e-posta hesabı için sizden herhangi bir ücret talep edilmez yani Hotmail e-posta hizmeti tamamen ücretsizdir.
 <br>
+<a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">Hotmail Hesabı Açmak İçin Buraya Tıkla</a>
+<br>
 E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirtmiştik. Bu servislerden en eskisi olan Hotmail'i anlattığımıza göre şimdi bir başka e-posta hizmeti veren yani üzerinden e-posta adresi alabileceğiniz servisten bahsedebiliriz. İsmi Gmail olan e-posta servisi, insanlar arasında en yaygın kullanılanıdır. Gmail, isminden de belli olduğu üzere Google nin bir hizmetidir. Gmail hesabı alındığında Google nin birçok hizmetine de kolayca ulaşılabildiğinden ve gerek hızından gerek basit ve sade kullanımından dolayı insanların tercih sebebi olmuştur. Gmail'in iş dünyasında da kullanımı oldukça yaygındır. Sonuç olarak e-posta hesabı açmak için Gmail de seçeneklerimiz arasındadır.
+<br>
+<a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html">Gmail Hesabı Açmak İçin Buraya Tıkla</a>
 <br>
 Üzerinden e-posta hesabı açabileceğiniz servisler arasında Yandeks de bulunmaktadır. 
 Yandeks günümüzde ülkemizde de kullanılan bir arama motorudur. Yandeks e-posta servisinin ismi yandeksmail dir
 Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir, iş dünyasında da faydalanabilirsiniz.
+<br>
+<a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html">Yandex Mail Hesabı Açmak İçin Buraya Tıkla</a>
+<br>
 </p>
-<h2 id="tale-features">Özellikler</h2>
+<h2 id="tale-features">E Posta Açmanın Özellikleri</h2>
 <ul>
-  <li>Vesaire</li>
+<li>Hotmail: En çok kullanılan 2 mail servisinden biridir, basit ve etkileyici bir arayüzü vardır.</li>
+<li>Gmail: En çok kullanılan 2 mail servisinden biridir, buradan hesap alırsanız aynı zamanda Youtube hesabınız da olur.</li>
+<li>Yandex Mail: Pek tercih edilmez ancak telefonsuz olarak kayıt olabilirsiniz.</li>
 </ul>
-<h2 id="browser-support">Destek</h2>
-<p>
-Vesaire
-</p>
+<h2 id="browser-support">E Posta Türkçe Destek</h2>
+<p>Tüm email aç servislerine dair detaylı bilgiyi ve desteği sitemiz üzerinden alabilirsiniz.</p>
 </div>
 </main>
 <footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
