--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         <h1 class="catalogue-title">Email Aç</h1>
         <div class="catalogue-line"></div>
         <p>Email Açmanın en kolay yollarını bu yazımızda bulabilirsiniz.</p>
-      </div></a></div></main>
+      </div></a>
+        <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
+      <div>
+        <h2 class="catalogue-title">Hotmail Hesabı Aç</h2>
+        <div class="catalogue-line"></div>
+        <p>Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden kaydolmayı ücretsiz öğrenin.</p>
+      </div></a>
+      </div></main>
     <footer><span>&copy; 2018 / Email Aç</span></footer>
 <link rel="stylesheet" href="/style.css"></body>
 </html>
