--- a/index.html
+++ b/index.html
@@ -10,21 +10,39 @@
 <meta property="og:locale" content="tr_TR" />
 </head>
   <body>
-    <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
+    <nav class="nav"><div class="nav-container"><a href="/"><h1 class="nav-title">Email Aç</h1></a>
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
     <main>
       <div class="catalogue">
       <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
       <div>
-        <h1 class="catalogue-title">Email Aç</h1>
+        <h2 class="catalogue-title">Email Aç</h2>
         <div class="catalogue-line"></div>
         <p>Email Açmanın en kolay yollarını bu yazımızda bulabilirsiniz.</p>
       </div></a>
-        <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
+        <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html" class="catalogue-item">
       <div>
         <h2 class="catalogue-title">Hotmail Hesabı Aç</h2>
         <div class="catalogue-line"></div>
         <p>Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden kaydolmayı ücretsiz öğrenin.</p>
+      </div></a>
+        <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html" class="catalogue-item">
+      <div>
+        <h2 class="catalogue-title">Gmail Hesabı Aç</h2>
+        <div class="catalogue-line"></div>
+        <p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p>
+      </div></a>
+        <a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html" class="catalogue-item">
+      <div>
+        <h2 class="catalogue-title">Msn Kaydol - Msn Kur</h2>
+        <div class="catalogue-line"></div>
+        <p>Msn kurmak için ilk olarak yeni bir kullanıcı adıyla kaydolmanız gerekir.</p>
+      </div></a>
+        <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html" class="catalogue-item">
+      <div>
+        <h2 class="catalogue-title">Yandeks Mail Hesabı Aç</h2>
+        <div class="catalogue-line"></div>
+        <p>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!</p>
       </div></a>
       </div></main>
     <footer><span>&copy; 2018 / Email Aç</span></footer>
