--- a/email-ac.html
+++ b/email-ac.html
@@ -41,7 +41,7 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <li>Yandex Mail: Pek tercih edilmez ancak telefonsuz olarak kayıt olabilirsiniz.</li>
 </ul>
 <h2 id="browser-support">E Posta Türkçe Destek</h2>
-<p>Tüm email aç servislerine dair detaylı bilgiyi ve desteği sitemiz üzerinden alabilirsiniz.</p>
+<p>Tüm email aç servislerine dair detaylı bilgiyi ve desteği sitemiz üzerinden alabilirsiniz.</p><hr>
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
@@ -49,7 +49,7 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
-</ul>
+</ul><hr>
 </div>
 </main>
 <footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
