--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -19,7 +19,7 @@
 Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri bilinen bir gerçek. Neden diye soracak olursanız, hemen söyleyelim. İnsanlar hotmail kaydolmayı, Hotmail kurmayı vesaire zor bir işlem sanıyorlar. Halbuki en fazla 1 dakika içerisinde yeni bir e posta açabilirsiniz. Nasıl mı? Hemen anlatalım.<br></p>
 <h2>Hotmail Kaydol</h2>
 <ul>
-<li>Resmi siteden kayıt olmanız gerekiyor. Bu yüzden ilk olarak <a style="color:red;" href="https://goo.gl/hQDTNz" rel="nofollow" target="_blank">ŞURADAN</a> resmi kayıt formuna giriş yapın.</li>
+<li>Öncelikle <a style="color:red;" href="https://goo.gl/hQDTNz" rel="nofollow" target="_blank">ŞURADAN</a> resmi kayıt formuna giriş yapın. Bu formu doldurduktan sonra bir hesabınız olacak.</li>
 <li>Kendinize hiç kimsenin daha önceden almadığı bir kullanıcı adı bulun ve yazın. Sadece sizde olan bir kullanıcı adı bulmanız lazım. Yoksa çok saçma olur. Örneğin hem siz de, hem de bir başkasında a@hotmail.com diye kullanıcı adı olsa. Size gelecek olan e-postalar o kişiye de gider. Düşüncesi bile saçma değil mi? Bu yüzden özgün bir isim bulun.</li>
 <li>Şifrenizi zor ve akılda kalıcı bir kombinasyon ile oluşturun. Yani hem unutmayın, hem de kötü niyetli kimseler parolanızı bulamasın.</li>
 <li>Ad-Soyad, Doğum tarihi, Ülke gibi klasik bilgileri doldurun. Posta kodu kısmına 34100 yazabilirsiniz. Onun çok fazla önemi yok.</li>
