--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<title>Hotmail Hesabı Aç: Hotmail Kaydol</title>
+<title>Hotmail Hesabı Aç: Hotmail Kaydol (Türkçe Destek)</title>
 <meta name="description" content="Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden hotmail kaydolmayı ücretsiz öğrenin."/>
 <meta name="robots" content="index, follow"/>
 <meta property="og:locale" content="tr_TR" />
