--- a/msn-kaydol-msn-kur.html
+++ b/msn-kaydol-msn-kur.html
@@ -31,7 +31,7 @@ Son zamanlarda hala bazı kişiler bu şekilde aramalar yapıyor. Çünkü ülke
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
-<a href="http://www.mailhesabiac.com/msn-kaydol.html"><li>Msn Kaydol - Msn Kur</li></a>
+<a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html"><li>Msn Kaydol - Msn Kur</li></a>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
