--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -33,7 +33,7 @@ Kendi isteğinize göre herhangi bir isimle e posta adresinizi açabilirsiniz. E
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
-<a href="http://www.mailhesabiac.com/msn-kaydol.html"><li>Msn Kaydol - Msn Kur</li></a>
+<a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html"><li>Msn Kaydol - Msn Kur</li></a>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
