--- a/email-ac.html
+++ b/email-ac.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<title>Email Aç | E Posta Aç</title>
+<title>Email Aç - E Posta Aç</title>
 <meta name="description" content="Email Açmanın en kolay yollarını, E-Posta aç işleminin her türlü detayını sitemizde bulabilirsiniz."/>
 <meta name="robots" content="index, follow"/>
 <meta property="og:locale" content="tr_TR" />
@@ -45,7 +45,7 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
-<a href="http://www.mailhesabiac.com/msn-kaydol.html"><li>Msn Kaydol - Msn Kur</li></a>
+<a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html"><li>Msn Kaydol - Msn Kur</li></a>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
