--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="tr-TR">
 <head>
 <meta charset="UTF-8">
@@ -6,9 +5,7 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <title>Hotmail Hesabı Aç: Hotmail Kaydol (Türkçe Destek)</title>
 <meta name="description" content="Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden hotmail kaydolmayı ücretsiz öğrenin."/>
-<meta name="robots" content="index, follow"/>
-<meta property="og:locale" content="tr_TR" />
-</head>
+<link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
 <body>
 <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
 <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
@@ -41,5 +38,4 @@ Kendi isteğinize göre herhangi bir isimle e posta adresinizi açabilirsiniz. E
 </div>
 </main>
 <footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
-<link rel="stylesheet" href="/style.css"></body>
-</html>
+</body></html>
