--- a/gmail-hesabi-ac.html
+++ b/gmail-hesabi-ac.html
@@ -1,15 +1,7 @@
-
-<!DOCTYPE html>
-<html lang="tr-TR">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<html lang="tr-TR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <title>Ücretsiz Gmail Hesabı Aç 2018 (Türkçe Destek)</title>
 <meta name="description" content="Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz."/>
-<meta name="robots" content="index, follow"/>
-<meta property="og:locale" content="tr_TR" />
-</head>
+<link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
 <body>
 <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
 <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
@@ -36,9 +28,4 @@ Aslında gmail.com resmi web sitesi üzerinde bu işlem gayet basit bir dille an
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
-</ul>
-</div>
-</main>
-<footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
-<link rel="stylesheet" href="/style.css"></body>
-</html>
+</ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer></body></html>
