--- a/email-ac.html
+++ b/email-ac.html
@@ -6,9 +6,7 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <title>Email Aç - E Posta Aç</title>
 <meta name="description" content="Email Açmanın en kolay yollarını, E-Posta aç işleminin her türlü detayını sitemizde bulabilirsiniz."/>
-<meta name="robots" content="index, follow"/>
-<meta property="og:locale" content="tr_TR" />
-</head>
+<link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
 <body>
 <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
 <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
@@ -49,9 +47,4 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
-</ul>
-</div>
-</main>
-<footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
-<link rel="stylesheet" href="/style.css"></body>
-</html>
+</ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer></body></html>
