--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="tr-TR">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
+<html lang="tr-TR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
 <title>Ücretsiz Email Aç: E Posta Hesabı Al</title>
 <meta name="description" content="Ücretsiz Mail Hesabı Aç, Email Aç, E Posta Aç, Hotmail Aç, Gmail Aç konularında sizlere yardımcı olmaya geldik!"/>
-<meta name="robots" content="index, follow"/>
-<meta property="og:locale" content="tr_TR" />
-</head>
+<link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
   <body>
     <nav class="nav"><div class="nav-container"><a href="/"><h1 class="nav-title">Email Aç</h1></a>
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
@@ -43,8 +36,4 @@
         <h2 class="catalogue-title">Yandeks Mail Hesabı Aç</h2>
         <div class="catalogue-line"></div>
         <p>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!</p>
-      </div></a>
-      </div></main>
-    <footer><span>&copy; 2018 / Email Aç</span></footer>
-<link rel="stylesheet" href="/style.css"></body>
-</html>
+</div></a></div></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
