--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@
         <h2 class="catalogue-title">Yandeks Mail Hesabı Aç</h2>
         <div class="catalogue-line"></div>
         <p>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!</p>
+        <h3>BLOG</h3><ul><a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acarim"><li>Hotmail Şifremi Unuttum: Nasıl Açarım?</li></a></ul>
 </div></a></div></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
