--- a/index.html
+++ b/index.html
@@ -36,5 +36,4 @@
         <h2 class="catalogue-title">Yandeks Mail Hesabı Aç</h2>
         <div class="catalogue-line"></div>
         <p>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!</p>
-        <ul><li>BLOG</li><a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul>
-</div></a></div></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
+</div></a></div><ul><li>BLOG</li><a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
