--- a/index.html
+++ b/index.html
@@ -24,16 +24,9 @@
         <h2 class="catalogue-title">Gmail Hesabı Aç</h2>
         <div class="catalogue-line"></div>
         <p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p>
-      </div></a>
-        <a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html" class="catalogue-item">
-      <div>
-        <h2 class="catalogue-title">Msn Kaydol - Msn Kur</h2>
-        <div class="catalogue-line"></div>
-        <p>Msn kurmak için ilk olarak yeni bir kullanıcı adıyla kaydolmanız gerekir.</p>
-      </div></a>
-        <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html" class="catalogue-item">
-      <div>
-        <h2 class="catalogue-title">Yandeks Mail Hesabı Aç</h2>
-        <div class="catalogue-line"></div>
-        <p>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!</p>
-</div></a></div><ul><li>BLOG</li><a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
+      </div></a>     
+<h2 class="catalogue-title">BLOG</h2>
+<ul><a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html"><li>Msn Kaydol - Msn Kur</li></a>
+<a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>
+<a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul>     
+</div></a></div></main><footer><span>&copy; 2018 / Email Aç</span></footer></body></html>
