--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="catalogue-line"></div>
         <p>Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden kaydolmayı ücretsiz öğrenin. [@hotmail uzantı]</p>
       </div></a>
-<div><h2 class="catalogue-title">Gmail Hesabı Aç</h2><div class="catalogue-line"></div><p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p></div></a>
+<a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html" class="catalogue-item"><div><h2 class="catalogue-title">Gmail Hesabı Aç</h2><div class="catalogue-line"></div><p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p></div></a>
 BLOG<div class="catalogue-line"></div>
 <ul><a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!
 <a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul>
