--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -27,6 +27,10 @@ Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri
 <p>E posta, günümüzde gerek iş gerek arkadaşlık gerek sosyal sorumluluk temalı her toplumun ferdinin başvurması gereken bir mecra haline gelmiştir. Anlaşılacağı üzere insanlar e posta ortamında bir çok işlerini yürütebilir, ihtiyaçlarını giderebilirler. E posta nın temelinde haberleşme ihtiyacı yatar. E posta adresleriniz aracılığıyla tanıdıklarınızla konuşabilir, çok sayıda insana ulaşıp sesinizi duyurabilirsiniz. Ayrıca bir hotmail hesabının size getirileri çok fazladır. Sadece mail hesabıyla sınırlı kalmamaktadır. Anında mesajlaşma yani Skype sistemi, XBOX live oyun sistemi, Outlook gibi e posta hizmeti, OneDrive ile dosya depolama gibi bir çok hizmeti de tek hesaptan sizlere ulaştırır. <br><br>
 Kendi isteğinize göre herhangi bir isimle e posta adresinizi açabilirsiniz. E posta kullanımınızı hem bilgisayar hem de telefon üzerinden gerçekleştirebilirsiniz. Öncelikle muhattabınızı belirlemelisiniz. Muhattabınız kişi veya kişiler olabilir yani ister kişiye özel postalar gönderir isterseniz de topluluğa hitap edebilirsiniz. Muhattabınızı seçtikten sonra isteğinize bağlı olarak yazınızın içeriğini karşıya özetler biçimde konu kısmını belirleyip yazabilirsiniz. Yazı veya fotoğraf ekleyebilir, karşı tarafla kolay ve hızlı bir biçimde iletişim kurabilirsiniz.
 </p>
+<h3>Hotmail İle İlgili Diğer Faydalı Yazılar</h3>
+<ul>
+<a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a>
+</ul>
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
