--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <nav class="nav"><div class="nav-container"><a href="/"><h1 class="nav-title">Email Aç</h1></a>
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
     <main>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       <div class="catalogue">
       <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
       <div>
