--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden kaydolmayı ücretsiz öğrenin. [@hotmail uzantı]</p>
       </div></a>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html" class="catalogue-item"><div><h2 class="catalogue-title">Gmail Hesabı Aç</h2><div class="catalogue-line"></div><p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p></div></a>
-<ul>BLOG<br><!-- ResponsLink -->
+<!-- ResponsLink -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7942429830883405"
@@ -38,7 +38,7 @@
      data-ad-format="link"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!
+</script><ul>BLOG<a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!
 <a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a>
 <a href="http://www.mailhesabiac.com/junk-mail-nedir-nasil-bakilir.html"><li>Junk Mail Nedir? Nasıl Bakılır?</li></a></ul>
 <a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html" class="catalogue-item"><div><h2 class="catalogue-title">Msn Kaydol - Msn Kur</h2><div class="catalogue-line"></div><p>Yeni bir MSN hesabı açmak e-postalarınızı tek bir yerden yönetmenizi sağlar. [@outlook uzantı]</p></div></a>     
