--- a/email-ac.html
+++ b/email-ac.html
@@ -16,7 +16,15 @@
 <p>
 Günümüzde yediden yetmişe her kesimin kullandığı e posta, yıllardır ücretsiz hizmet veren bir haberleşme aracıdır. Siz de e-posta nedir öğrenmek ve kendinize bir hesap açmak istiyorsanız yazımızı okumaya devam edebilirsiniz. 
 Üzerinden e-posta hesabı açabileceğiniz birçok servis bulunmaktadır. Bunlardan birisi Hotmail'dir. Size biraz Hotmail'den bahsedelim.
-<h2>Hotmail Aç</h2>
+      <!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><h2>Hotmail Aç</h2>
 Hotmail, e posta açma amacı üzerine kurulmuş bir servistir. Bu servis 1995 yılında kurulmuş olup daha eski kuşaklarca bilinen ve yine haberleşme amacı üzerine kurulu olan MSN'de bu servise aittir. Ancak günümüzde MSN hizmeti olmayıp bu görevi e-posta hesapları yüklenmiştir. Hotmail üzerinden e-posta adresi alımı ve kullanımı oldukça yaygındır. Hotmail üzerinden açtığınız e-posta hesabı için sizden herhangi bir ücret talep edilmez yani Hotmail e-posta hizmeti tamamen ücretsizdir.
 <br>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">Hotmail Hesabı Açmak İçin Buraya Tıkla</a>
