--- a/gmail-hesabi-ac.html
+++ b/gmail-hesabi-ac.html
@@ -12,7 +12,15 @@
 Gmail, Google şirketi tarafından yayınlanan güvenli ve ücretsiz bir e-mail sitesidir. POP3 ve IMAP4 protokolleri ile de kullanıcıların ulaşımına sunulmuştur. 
 <br><br> 
 Tarihler 1 Nisan 2004'ü gösterdiğinde Gmail yayın hayatına başlayacak ve çok kısa bir süre içerisinde Dünya üzerinde en çok kullanılan mail servislerinden biri olacaktır. Ancak Türkiye'de asıl çıkışını yakalaması: Youtube video izleme ve paylaşım sitesinin ünlü olmasıyla yaşamıştır. Böylelikle ülkemizde de milyonlarca üyesi bulunan Gmail, sonradan Android cihazların Google Play hesabı almalarını zorunlu kılarak, milyarlarca kişinin bu servisi kullanmasına olanak sağlamıştır. Peki nasıl gmail hesabı açabilirsiniz? 
-<h2>Gmail Hesabı Nasıl Alınır?</h2> 
+      <!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><h2>Gmail Hesabı Nasıl Alınır?</h2> 
 Aslında gmail.com resmi web sitesi üzerinde bu işlem gayet basit bir dille anlatılmıştır. Ancak anlatımın sığlığı bazı kullanıcıların hesap açarken yaşadığı sorunları dile getirmemekle birlikte, birçok kişi bu yüzden yeni bir e posta hesabı açamaz hale geldiler. Bizler de <a href="http://www.mailhesabiac.com">email aç</a> web sitesi olarak sizlere basitçe bu anlatımı yapmak istedik. 
 <ul><li>Gmail.com resmi web sitesine giriş yapın.</li> 
 <li>İsterseniz hesabınız varsa kullanıcı adı ve şifrenizle hemen giriş yapın. Ancak bu sayfamızı ziyaret ettiğinize göre bir hesabınız yok. O yüzden hemen orada altta bulunan mavi renkteki "Hesap Oluştur" linkini ziyaret edin.</li> 
