--- a/email-ac.html
+++ b/email-ac.html
@@ -10,7 +10,8 @@
 <body>
 <nav class="nav"><div class="nav-container"><a href="/"><h2 class="nav-title">Email Aç</h2></a>
 <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
-            <!-- ResponsLink -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7942429830883405"
