--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -18,6 +18,7 @@ Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri
 </script><h2>Hotmail Kaydol</h2>
 <ul>
 <li>Öncelikle <a style="color:red;" href="https://goo.gl/hQDTNz" rel="nofollow" target="_blank">ŞURADAN</a> resmi kayıt formuna giriş yapın. Bu formu doldurduktan sonra bir hesabınız olacak.</li>
+<li>Kendinize hiç kimsenin daha önceden almadığı bir kullanıcı adı bulun ve yazın.</li>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ResponsLink -->
 <ins class="adsbygoogle"
@@ -27,22 +28,24 @@ Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri
      data-ad-format="link"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><li>Kendinize hiç kimsenin daha önceden almadığı bir kullanıcı adı bulun ve yazın. Sadece sizde olan bir kullanıcı adı bulmanız lazım. Yoksa çok saçma olur. Örneğin hem siz de, hem de bir başkasında a@hotmail.com diye kullanıcı adı olsa. Size gelecek olan e-postalar o kişiye de gider. Düşüncesi bile saçma değil mi? Bu yüzden özgün bir isim bulun.</li>
+</script>
+<li>Sadece sizde olan bir kullanıcı adı bulmanız lazım. Yoksa çok saçma olur. Örneğin hem siz de, hem de bir başkasında a@hotmail.com diye kullanıcı adı olsa. Size gelecek olan e-postalar o kişiye de gider. Düşüncesi bile saçma değil mi? Bu yüzden özgün bir isim bulun.</li>
 <li>Şifrenizi zor ve akılda kalıcı bir kombinasyon ile oluşturun. Yani hem unutmayın, hem de kötü niyetli kimseler parolanızı bulamasın.</li>
 <li>Ad-Soyad, Doğum tarihi, Ülke gibi klasik bilgileri doldurun. Posta kodu kısmına 34100 yazabilirsiniz. Onun çok fazla önemi yok.</li>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <li>Telefon numaranız varsa yazın. Tamamen ücretsiz bir doğrulama kodu yollayacak, hesabınızın güvenliği için. Eğer yoksa Alternatif E Posta kısmına ailenizden birinin e posta adresini yazın.</li>
 <li>Güvenlik kodunu yazın ve yeni bir hotmail hesabı açma işleminin sonuna geldiniz. Hayırlı olsun!</li>
 </ul>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><h3>Hotmail Kur ve Yeni E Posta Hesabı Aç</h3>
+<h3>Hotmail Kur ve Yeni E Posta Hesabı Aç</h3>
 <p>E posta, günümüzde gerek iş gerek arkadaşlık gerek sosyal sorumluluk temalı her toplumun ferdinin başvurması gereken bir mecra haline gelmiştir. Anlaşılacağı üzere insanlar e posta ortamında bir çok işlerini yürütebilir, ihtiyaçlarını giderebilirler. E posta nın temelinde haberleşme ihtiyacı yatar. E posta adresleriniz aracılığıyla tanıdıklarınızla konuşabilir, çok sayıda insana ulaşıp sesinizi duyurabilirsiniz. Ayrıca bir hotmail hesabının size getirileri çok fazladır. Sadece mail hesabıyla sınırlı kalmamaktadır. Anında mesajlaşma yani Skype sistemi, XBOX live oyun sistemi, Outlook gibi e posta hizmeti, OneDrive ile dosya depolama gibi bir çok hizmeti de tek hesaptan sizlere ulaştırır. <br><br>
 Kendi isteğinize göre herhangi bir isimle e posta adresinizi açabilirsiniz. E posta kullanımınızı hem bilgisayar hem de telefon üzerinden gerçekleştirebilirsiniz. Öncelikle muhattabınızı belirlemelisiniz. Muhattabınız kişi veya kişiler olabilir yani ister kişiye özel postalar gönderir isterseniz de topluluğa hitap edebilirsiniz. Muhattabınızı seçtikten sonra isteğinize bağlı olarak yazınızın içeriğini karşıya özetler biçimde konu kısmını belirleyip yazabilirsiniz. Yazı veya fotoğraf ekleyebilir, karşı tarafla kolay ve hızlı bir biçimde iletişim kurabilirsiniz.
 </p><h3>Hotmail İle İlgili Diğer Faydalı Yazılar</h3><ul><a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a></ul><h3>Diğer Mail Servisleri:</h3><ul><a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a><a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html"><li>Msn Kaydol - Msn Kur</li></a><a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a><a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a><a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a></ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer></body></html>
