--- a/hotmail-hesabi-ac.html
+++ b/hotmail-hesabi-ac.html
@@ -18,7 +18,6 @@ Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri
 </script><h2>Hotmail Kaydol</h2>
 <ul>
 <li>Öncelikle <a style="color:red;" href="https://goo.gl/hQDTNz" rel="nofollow" target="_blank">ŞURADAN</a> resmi kayıt formuna giriş yapın. Bu formu doldurduktan sonra bir hesabınız olacak.</li>
-<li>Kendinize hiç kimsenin daha önceden almadığı bir kullanıcı adı bulun ve yazın.</li>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ResponsLink -->
 <ins class="adsbygoogle"
@@ -29,7 +28,7 @@ Hotmail Hesabı Aç konusunda insanların çok büyük yanılgıya düştükleri
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<li>Sadece sizde olan bir kullanıcı adı bulmanız lazım. Yoksa çok saçma olur. Örneğin hem siz de, hem de bir başkasında a@hotmail.com diye kullanıcı adı olsa. Size gelecek olan e-postalar o kişiye de gider. Düşüncesi bile saçma değil mi? Bu yüzden özgün bir isim bulun.</li>
+<li>İlk olarak kendinize hiç kimsenin daha önceden almadığı bir kullanıcı adı bulmanız gerekli ve sonra onu "e-posta" kısmına yazın. İsterseniz @outlook, isterseniz @hotmail uzantısını hemen sol taraftan seçin. Bu arada neden benzersiz kullanıcı adı bulmak zorundasınız, hemen açıklayalım. Sadece sizde olan bir kullanıcı adı bulmanız lazım. Yoksa çok saçma olur. Örneğin hem siz de, hem de bir başkasında a@hotmail.com diye kullanıcı adı olsa. Size gelecek olan e-postalar o kişiye de gider. Düşüncesi bile saçma değil mi? Bu yüzden kimsede olmadan özgün bir isim bulmanız gerekiyor. Daha önce başkasının kullandığı bir isim yazarsanız zaten sistem sizi uyaracaktır.</li>
 <li>Şifrenizi zor ve akılda kalıcı bir kombinasyon ile oluşturun. Yani hem unutmayın, hem de kötü niyetli kimseler parolanızı bulamasın.</li>
 <li>Ad-Soyad, Doğum tarihi, Ülke gibi klasik bilgileri doldurun. Posta kodu kısmına 34100 yazabilirsiniz. Onun çok fazla önemi yok.</li>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
