--- a/gmail-hesabi-ac.html
+++ b/gmail-hesabi-ac.html
@@ -37,8 +37,7 @@ Aslında gmail.com resmi web sitesi üzerinde bu işlem gayet basit bir dille an
 </script><li>Karşınıza kaydolma formu çıkacaktır. Buraya doğru bir şekilde bilgilerinizi girin.</li> 
 <li>Şifrenizi, kullanıcı adınızı vesaire düzgünce belirleyin ve asla unutmayın!</li> 
 <li>Hesabınızı Oluşturun butonuna tıklayın ve yeni e posta adresiniz hayırlı olsun.</li> 
-</ul> 
-</p>
+</ul></p><h3>İlginizi Çekebilecek Yazılar:</h3><ul><a href="http://www.mailhesabiac.com/email-hesabim-calindi-nasil-kurtarabilirim.html"><li>Email Hesabım Çalındı, Nasıl Kurtarabilirim?</li></a></ul>
 <h3>Diğer Mail Servisleri:</h3>
 <ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
