--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="catalogue">
       <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
       <div>
-        <h2 class="catalogue-title">Email Aç</h2>
+        <h2 class="catalogue-title">Ücretsiz Email Açabileceğiniz 3 Servis! E Posta Aç</h2>
         <div class="catalogue-line"></div>
-        <p>Email Açmanın en kolay yollarını bu yazımızda bulabilirsiniz.</p>
+        <p>Ücretsiz olarak email açabileceğiniz 3 servisi ve nasıl e posta açıldığını anlattık.</p>
       </div></a>
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ResponsLink -->
