--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="catalogue">
       <a href="http://www.mailhesabiac.com/email-ac.html" class="catalogue-item">
       <div>
-        <h2 class="catalogue-title">Ücretsiz Email Açabileceğiniz 3 Servis</h2>
+        <h2 class="catalogue-title">Ücretsiz Email Açabileceğiniz 3 E-Posta Sitesi</h2>
         <div class="catalogue-line"></div>
         <p>Ücretsiz olarak email açabileceğiniz 3 servisi ve nasıl e posta açıldığını anlattık.</p>
       </div></a>
