--- a/email-ac.html
+++ b/email-ac.html
@@ -25,11 +25,11 @@ Günümüzde yediden yetmişe her kesimin kullandığı e posta, yıllardır üc
      data-ad-format="link"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><h2>Hotmail Aç</h2>
+</script><h2>1. Hotmail Aç</h2>
 Hotmail, e posta açma amacı üzerine kurulmuş bir servistir. Bu servis 1995 yılında kurulmuş olup daha eski kuşaklarca bilinen ve yine haberleşme amacı üzerine kurulu olan MSN'de bu servise aittir. Ancak günümüzde MSN hizmeti olmayıp bu görevi e-posta hesapları yüklenmiştir. Hotmail üzerinden e-posta adresi alımı ve kullanımı oldukça yaygındır. Hotmail üzerinden açtığınız e-posta hesabı için sizden herhangi bir ücret talep edilmez yani Hotmail e-posta hizmeti tamamen ücretsizdir.
 <br>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">Hotmail Hesabı Açmak İçin Buraya Tıkla</a>
-<h2>Gmail Aç</h2>
+<h2>2. Gmail Aç</h2>
 E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirtmiştik. Bu servislerden en eskisi olan Hotmail'i anlattığımıza göre şimdi bir başka e-posta hizmeti veren yani üzerinden e-posta adresi alabileceğiniz servisten bahsedebiliriz. İsmi Gmail olan e-posta servisi, insanlar arasında en yaygın kullanılanıdır. Gmail, isminden de belli olduğu üzere Google nin bir hizmetidir. <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ResponsLink -->
 <ins class="adsbygoogle"
@@ -42,7 +42,7 @@ E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirt
 </script> <br> Gmail hesabı alındığında Google nin birçok hizmetine de kolayca ulaşılabildiğinden ve gerek hızından gerek basit ve sade kullanımından dolayı insanların tercih sebebi olmuştur. Gmail'in iş dünyasında da kullanımı oldukça yaygındır. Sonuç olarak e-posta hesabı açmak için Gmail de seçeneklerimiz arasındadır.
 <br>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html">Gmail Hesabı Açmak İçin Buraya Tıkla</a>
-<h2>Yandeks Mail Aç</h2>
+<h2>3. Yandeks Mail Aç</h2>
 Üzerinden e-posta hesabı açabileceğiniz servisler arasında Yandeks de bulunmaktadır. 
 Yandeks günümüzde ülkemizde de kullanılan bir arama motorudur. Yandeks e-posta servisinin ismi yandeksmail dir
 Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir, iş dünyasında da faydalanabilirsiniz.
