--- a/index.html
+++ b/index.html
@@ -22,16 +22,7 @@
         <div class="catalogue-line"></div>
         <p>Ücretsiz olarak email açabileceğiniz 3 servisi ve nasıl e posta açıldığını anlattık.</p>
       </div></a>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+      
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html" class="catalogue-item">
 <div>
 <h2 class="catalogue-title">Hotmail Hesabı Aç</h2>
@@ -39,15 +30,8 @@
 <p>Hotmail hesabı açmayı bilmiyorsanız hemen bu makalemizden kaydolmayı ücretsiz öğrenin. [@hotmail uzantı]</p>
 </div></a>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html" class="catalogue-item"><div><h2 class="catalogue-title">Gmail Hesabı Aç</h2><div class="catalogue-line"></div><p>Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz.</p></div></a>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><ul>BLOG<a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!
+
+<ul>BLOG<a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Hesabı Aç</li></a>Yandeks Mail hesabı açmanın en güzel yanı kaydolurken sizden telefon numarası istemez!
 <a href="http://www.mailhesabiac.com/hotmail-sifremi-unuttum-nasil-acabilirim.html"><li>Hotmail Şifremi Unuttum: Nasıl Açabilirim?</li></a>
 <a href="http://www.mailhesabiac.com/junk-mail-nedir-nasil-bakilir.html"><li>Junk Mail Nedir? Nasıl Bakılır?</li></a>
 <a href="http://www.mailhesabiac.com/email-hesabim-calindi-nasil-kurtarabilirim.html"><li>Email Hesabım Çalındı, Nasıl Kurtarabilirim?</li></a></ul>
