--- a/email-ac.html
+++ b/email-ac.html
@@ -30,16 +30,9 @@ Hotmail, e posta açma amacı üzerine kurulmuş bir servistir. Bu servis 1995 y
 <br>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">Hotmail Hesabı Açmak İçin Buraya Tıkla</a>
 <h2>2. Gmail Aç</h2>
-E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirtmiştik. Bu servislerden en eskisi olan Hotmail'i anlattığımıza göre şimdi bir başka e-posta hizmeti veren yani üzerinden e-posta adresi alabileceğiniz servisten bahsedebiliriz. İsmi Gmail olan e-posta servisi, insanlar arasında en yaygın kullanılanıdır. Gmail, isminden de belli olduğu üzere Google nin bir hizmetidir. <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script> <br> Gmail hesabı alındığında Google nin birçok hizmetine de kolayca ulaşılabildiğinden ve gerek hızından gerek basit ve sade kullanımından dolayı insanların tercih sebebi olmuştur. Gmail'in iş dünyasında da kullanımı oldukça yaygındır. Sonuç olarak e-posta hesabı açmak için Gmail de seçeneklerimiz arasındadır.
+E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirtmiştik. Bu servislerden en eskisi olan Hotmail'i anlattığımıza göre şimdi bir başka e-posta hizmeti veren yani üzerinden e-posta adresi alabileceğiniz servisten bahsedebiliriz. İsmi Gmail olan e-posta servisi, insanlar arasında en yaygın kullanılanıdır. Gmail, isminden de belli olduğu üzere Google nin bir hizmetidir.
+     
+Gmail hesabı alındığında Google nin birçok hizmetine de kolayca ulaşılabildiğinden ve gerek hızından gerek basit ve sade kullanımından dolayı insanların tercih sebebi olmuştur. Gmail'in iş dünyasında da kullanımı oldukça yaygındır. Sonuç olarak e-posta hesabı açmak için Gmail de seçeneklerimiz arasındadır.
 <br>
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html">Gmail Hesabı Açmak İçin Buraya Tıkla</a>
 <h2>3. Yandeks Mail Aç</h2>
@@ -50,16 +43,7 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html">Yandex Mail Hesabı Açmak İçin Buraya Tıkla</a>
 <br>
 </p>
-     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 <h2 id="tale-features">E Posta Açmanın Özellikleri</h2>
 <ul>
 <li>Hotmail: En çok kullanılan 2 mail servisinden biridir, basit ve etkileyici bir arayüzü vardır.</li>
