--- a/msn-kaydol-msn-kur.html
+++ b/msn-kaydol-msn-kur.html
@@ -15,30 +15,14 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script><br> 
 Hotmail e-posta hesabı, Microsoft tarafından ücretsiz olarak hizmete sunulan web tabanlı bir <a href="http://www.mailhesabiac.com">e-mail aç</a> servisidir. Hotmail e-posta en çok kullanılan servislerden biridir ve bu nedenle pek çok kişi e posta hesabı açarken sürekli hotmail’i kullanmaktadır. Peki Hotmail e posta hesabı almak istiyorsanız eğer ve bunu nasıl yapabileceğinizi bilmiyorsanız ne yapmanız gerekir, hemen o konuda size yardımcı olalım.  
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><h2>Msn Kaydol</h2> 
+
+<h2>Msn Kaydol</h2> 
 Arkadaşlar alttaki linke tıklayarak nasıl kayıt olabileceğinizi öğrenebilirsiniz.<br> 
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">http://www.mailhesabiac.com/hotmail-hesabi-ac.html</a> 
 <br> 
 Kayıt olduktan sonra şifrenizi ve kullanıcı adınızı unutmamanızı öneririz. Unutursanız birdaha hiçbir hesabınızı kullanamazsınız. Ancak yukarıda anlattığımız şekilde kayıt formunu doldururken gerçek ad-soyad-telefon numarası gibi bilgileri verirseniz, hesabınız çalındığı zaman veya şifrenizi unuttuğunuz zaman hemen telefon numaranıza yeni bir şifre isteyebilirsiniz. Böylelikle kötü niyetli kişiler hesabınızı kullanamaz ve çalamazlar. Bu konuda da gerekli talimatları sizlere verdikten sonra, bahsetmek istediğimiz diğer bir konu aslında MSN programının 2011 yılı itibariyle hayatımızdan tamamen silindiğinden bahsetmek olacak. 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><h3>MSN Kaldırıldı mı? Hala Kullanabilir miyiz?</h3> 
+
+<h3>MSN Kaldırıldı mı? Hala Kullanabilir miyiz?</h3> 
 Son zamanlarda hala bazı kişiler bu şekilde aramalar yapıyor. Çünkü ülkemizde yıllardır "msn kaydol" kelimesi yeni bir e posta açmak gibi kullanılıyor. Bizler de zaten size nasıl hesap açabileceğinizi anlatmıştık. Üstteki şekilde veya sitemizin diğer makalelerinde anlattığımız gibi yeni bir e posta adresi alarak istediğiniz şekilde kullanabilirsiniz. Buna ister MSN diyin, ister e posta diyin. Sonuç olarak hepsi aynı işlevi yerine getiriyor ve aynı anlama geliyorlar. 
 </p><h3>Diğer Mail Servisleri:</h3><ul>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html"><li>Hotmail Hesabı Aç</li></a>
