--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <nav class="nav"><div class="nav-container"><a href="/"><h1 class="nav-title">Email Aç</h1></a>
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
     <main>
-      <!-- ResponsLink -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7942429830883405"
