--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="tr-TR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
-<title>Email Aç: Ücretsiz E Posta Hesabı Al</title>
+<title>Email Aç: Ücretsiz E Posta Al</title>
 <meta name="description" content="Ücretsiz Mail Hesabı Aç, Email Aç, E Posta Aç, Hotmail Aç, Gmail Aç konularında sizlere yardımcı olmaya geldik!"/>
 <link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
   <body>
