--- a/gmail-hesabi-ac.html
+++ b/gmail-hesabi-ac.html
@@ -1,5 +1,5 @@
 <html lang="tr-TR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<title>Ücretsiz Gmail Hesabı Aç 2018 (Türkçe Destek)</title>
+<title>Ücretsiz Gmail Hesap Aç 2018 (Türkçe Destek)</title>
 <meta name="description" content="Gmail hesabı açarsanız Youtube ve Google Play gibi birçok uygulamaya da tek seferde kayıt olabilirsiniz."/>
 <link rel="stylesheet" href="/style.css"><meta name="robots" content="index, follow"/><meta property="og:locale" content="tr_TR" /></head>
 <body>
