--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       <ul><li><a href="/">Ana Sayfa</a></li></ul></div></nav>
     <main>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ResponsLink -->
+<!-- EsnekKur -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7942429830883405"
-     data-ad-slot="2012296391"
-     data-ad-format="link"></ins>
+     data-ad-slot="4225794798"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
