--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
         <div class="catalogue-line"></div>
         <p>Ücretsiz olarak email açabileceğiniz 3 servisi ve nasıl e posta açıldığını anlattık.</p>
       </div></a>
-      
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html" class="catalogue-item">
 <div>
 <h2 class="catalogue-title">Hotmail Hesabı Aç</h2>
