--- a/email-ac.html
+++ b/email-ac.html
@@ -30,6 +30,16 @@ Hotmail, e posta açma amacı üzerine kurulmuş bir servistir. Bu servis 1995 y
 <br>
 <a href="http://www.mailhesabiac.com/hotmail-hesabi-ac.html">Hotmail Hesabı Açmak İçin Buraya Tıkla</a>
 <h2>2. Gmail Aç</h2>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 E-posta hizmeti sağlayan birçok servis olduğunu yazımızın başında belirtmiştik. Bu servislerden en eskisi olan Hotmail'i anlattığımıza göre şimdi bir başka e-posta hizmeti veren yani üzerinden e-posta adresi alabileceğiniz servisten bahsedebiliriz. İsmi Gmail olan e-posta servisi, insanlar arasında en yaygın kullanılanıdır. Gmail, isminden de belli olduğu üzere Google nin bir hizmetidir.
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ResponsLink -->
