--- a/email-ac.html
+++ b/email-ac.html
@@ -53,7 +53,16 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html">Yandex Mail Hesabı Açmak İçin Buraya Tıkla</a>
 <br>
 </p>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ResponsLink -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7942429830883405"
+     data-ad-slot="2012296391"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h2 id="tale-features">E Posta Açmanın Özellikleri</h2>
 <ul>
 <li>Hotmail: En çok kullanılan 2 mail servisinden biridir, basit ve etkileyici bir arayüzü vardır.</li>
