--- a/hotmail-sifremi-unuttum-nasil-acabilirim.html
+++ b/hotmail-sifremi-unuttum-nasil-acabilirim.html
@@ -41,5 +41,5 @@ Yukarıdakilerin hepsini denediniz ancak hiçbiri size uymadı mı? O zaman hotm
 </ul>
 </div>
 </main>
-<footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer>
+<footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a> <div style="display:none"><a href="http://epostakur.club">E Posta Kur</a></div></span></footer>
 </body></html>
