--- a/index.html
+++ b/index.html
@@ -37,4 +37,4 @@
 <a href="http://www.mailhesabiac.com/junk-mail-nedir-nasil-bakilir.html"><li>Junk Mail Nedir? Nasıl Bakılır?</li></a>
 <a href="http://www.mailhesabiac.com/email-hesabim-calindi-nasil-kurtarabilirim.html"><li>Email Hesabım Çalındı, Nasıl Kurtarabilirim?</li></a></ul>
 <a href="http://www.mailhesabiac.com/msn-kaydol-msn-kur.html" class="catalogue-item"><div><h2 class="catalogue-title">Msn Kaydol - Msn Kur</h2><div class="catalogue-line"></div><p>Yeni bir MSN hesabı açmak e-postalarınızı tek bir yerden yönetmenizi sağlar. [@outlook uzantı]</p></div></a>     
-</div></a></div></main><footer><span>&copy; 2018 / Email Aç <div style="display:none"><a href="http://epostakur.club">E Posta Kur</a></div></span></footer></body></html>
+</div></a></div></main><footer><span>&copy; 2018 / Email Aç </span></footer></body></html>
